[package]
name = "claude-lan-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server that lets Claude instances discover and talk to each other over the LAN"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
gethostname = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
